@@ -21,6 +21,11 @@ Changelog for 1.3.8:
 * Logging improvements (Herman V)
 * Fixed company fax being printed under shipto (Herman V)
 * Fixed "File does not exist... [object HTMLButtonElement]" js error (Herman V)
+* Fixed timecard template headers not showing company name, etc (Chris T)
+* Fixed part account mappings broken after upgrade from 1.2 (Chris T)
+* Fixed quotation number increasing when saving existing quotation (Chris T)
+* Fixed invalid from address on backup routine (Chris T)
+* Fixed error "RROR: lower bound of FOR loop cannot be null" (Chris T)
 
 Changelog for LedgerSMB 1.3.7 (Categorized due to length)
 Database
